--- a/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
+++ b/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="math\Vector.cpp" />
     <ClCompile Include="src\Animator.cpp" />
+    <ClCompile Include="src\Assembly.cpp" />
     <ClCompile Include="src\Box2D.cpp" />
     <ClCompile Include="src\Box2DBody.cpp" />
     <ClCompile Include="src\Button.cpp" />
@@ -177,7 +178,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="src\Prefab.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Scene.cpp" />
     <ClCompile Include="src\SFText.cpp" />
@@ -196,6 +196,7 @@
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="inc\Animator.h" />
+    <ClInclude Include="inc\Assembly.h" />
     <ClInclude Include="inc\Box2D.h" />
     <ClInclude Include="inc\Box2DBody.h" />
     <ClInclude Include="inc\Button.h" />
@@ -207,7 +208,7 @@
     <ClInclude Include="inc\ImGuiApp.h" />
     <ClInclude Include="inc\Input.h" />
     <ClInclude Include="inc\Object.h" />
-    <ClInclude Include="inc\Prefab.h" />
+    <ClInclude Include="inc\Serialize.h" />
     <ClInclude Include="inc\Renderer.h" />
     <ClInclude Include="inc\Scene.h" />
     <ClInclude Include="inc\SFText.h" />
