--- a/HewGame/HewGame/imgui.ini
+++ b/HewGame/HewGame/imgui.ini
@@ -68,7 +68,11 @@ Size=960,360
 
 [Window][Pipe]
 Pos=0,0
-Size=296,360
+Size=302,360
+
+[Window][SaveScene?]
+Pos=253,342
+Size=16,35
 
 [Table][0xED52FBCC,12]
 RefScale=13
