Add Optional Cereal
デシリアライズする際に読み取れなかった値をデフォルト値にするヘッダーを加えた

--- a/HewGame/HewGame/HewGame.vcxproj.filters
+++ b/HewGame/HewGame/HewGame.vcxproj.filters
@@ -113,6 +113,9 @@
     <ClCompile Include="Permeation.cpp">
       <Filter>Component</Filter>
     </ClCompile>
+    <ClCompile Include="TestComponent.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="OutlineShader.hlsl" />
