--- a/HewGame/HewGame/HewGame.vcxproj.filters
+++ b/HewGame/HewGame/HewGame.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="EnemyChaser.h">
       <Filter>Component</Filter>
     </ClInclude>
+    <ClInclude Include="Goal.h">
+      <Filter>Component</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
