--- a/HewGame/HewGame/HewGame.vcxproj
+++ b/HewGame/HewGame/HewGame.vcxproj
@@ -145,8 +145,10 @@
   <ItemGroup>
     <ClInclude Include="Bounce.h" />
     <ClInclude Include="BreakScaffold.h" />
-    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Enemy_type1.h" />
     <ClInclude Include="EnemyChaser.h" />
+    <ClInclude Include="Enemy_type2.h" />
+    <ClInclude Include="Enemy_type3.h" />
     <ClInclude Include="Fog.h" />
     <ClInclude Include="Goal.h" />
     <ClInclude Include="LowGravity.h" />
@@ -166,7 +168,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BreakScaffold.cpp" />
-    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Enemy_type1.cpp" />
+    <ClCompile Include="Enemy_type2.cpp" />
+    <ClCompile Include="Enemy_type3.cpp" />
     <ClCompile Include="Fog.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Permeation.cpp" />
