--- a/HewGame/HewGame/HewGame.vcxproj.filters
+++ b/HewGame/HewGame/HewGame.vcxproj.filters
@@ -96,7 +96,13 @@
     <ClInclude Include="YkTestScene.h">
       <Filter>Scene</Filter>
     </ClInclude>
-    <ClInclude Include="Enemy.h">
+    <ClInclude Include="Enemy_type1.h">
+      <Filter>Component\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy_type2.h">
+      <Filter>Component\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy_type3.h">
       <Filter>Component\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
@@ -122,7 +128,13 @@
     <ClCompile Include="Permeation.cpp">
       <Filter>Component</Filter>
     </ClCompile>
-    <ClCompile Include="Enemy.cpp">
+    <ClCompile Include="Enemy_type1.cpp">
+      <Filter>Component\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy_type2.cpp">
+      <Filter>Component\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy_type3.cpp">
       <Filter>Component\Enemy</Filter>
     </ClCompile>
   </ItemGroup>
