--- a/HewGame/HewGame/imgui.ini
+++ b/HewGame/HewGame/imgui.ini
@@ -74,6 +74,14 @@ Size=302,360
 Pos=44,314
 Size=392,92
 
+[Window][Dear ImGui Metrics/Debugger]
+Pos=142,366
+Size=339,358
+
+[Window][Dear ImGui Metrics/Debugger/undopoints_C2226547]
+IsChild=1
+Size=288,130
+
 [Table][0xED52FBCC,12]
 RefScale=13
 Column 0  Width=105
