--- a/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
+++ b/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
@@ -139,6 +139,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <AdditionalIncludeDirectories>$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>
