--- a/HewGame/HewGame/HewGame.vcxproj
+++ b/HewGame/HewGame/HewGame.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="Bounce.h" />
     <ClInclude Include="BreakScaffold.h" />
+    <ClInclude Include="CrushRock.h" />
     <ClInclude Include="Enemy_type1.h" />
     <ClInclude Include="EnemyChaser.h" />
     <ClInclude Include="Enemy_type2.h" />
@@ -156,6 +157,7 @@
     <ClInclude Include="MoveSubWindow.h" />
     <ClInclude Include="Permeation.h" />
     <ClInclude Include="Rock.h" />
+    <ClInclude Include="RockGenerator.h" />
     <ClInclude Include="Scene_ProtoType.h" />
     <ClInclude Include="Sample_Animation.h" />
     <ClInclude Include="Sample_Box2D.h" />
@@ -174,6 +176,7 @@
     <ClCompile Include="Enemy_type3.cpp" />
     <ClCompile Include="Fog.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MoveSubWIndow.cpp" />
     <ClCompile Include="Permeation.cpp" />
     <ClCompile Include="Rock.cpp" />
     <ClCompile Include="stdafx.cpp">
