--- a/HewGame/HewGame/HewGame.vcxproj
+++ b/HewGame/HewGame/HewGame.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="Sample_Box2D.h" />
     <ClInclude Include="Sample_SceneLoad.h" />
     <ClInclude Include="SeigoTestScene.h" />
+    <ClInclude Include="SoundSaino.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="AntiGravity.h" />
     <ClInclude Include="Thon.h" />
@@ -184,6 +185,7 @@
     <ClCompile Include="MoveSubWIndow.cpp" />
     <ClCompile Include="Permeation.cpp" />
     <ClCompile Include="Rock.cpp" />
+    <ClCompile Include="SoundSaino.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
