--- a/HewGame/HewGame/HewGame.vcxproj.filters
+++ b/HewGame/HewGame/HewGame.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClInclude Include="BigRock.h">
       <Filter>Component</Filter>
     </ClInclude>
+    <ClInclude Include="SoundSaino.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -169,6 +172,9 @@
     </ClCompile>
     <ClCompile Include="MoveSubWIndow.cpp">
       <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="SoundSaino.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
