Change Window System
ウィンドウのシステムを更新した

--- a/HewGame/HewGame/HewGame.vcxproj.filters
+++ b/HewGame/HewGame/HewGame.vcxproj.filters
@@ -138,6 +138,12 @@
     <ClInclude Include="SoundSaino.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="MoveRect.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="RunFixedRoute.h">
+      <Filter>Component</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
