--- a/HewGame/HewGame/HewGame.vcxproj
+++ b/HewGame/HewGame/HewGame.vcxproj
@@ -109,7 +109,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <ForcedIncludeFiles>stdafx.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(SolutionDir)../DirectX11_2D_Framework/DirectX11_2D_Framework;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)../DirectX11_2D_Framework/DirectX11_2D_Framework;$(ProjectDir)clipper2/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -117,6 +117,7 @@
       <StackCommitSize>
       </StackCommitSize>
       <StackReserveSize>8388608</StackReserveSize>
+      <AdditionalDependencies>$(PorjectDir)clipper2/lib/Clipper2d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -130,7 +131,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <ForcedIncludeFiles>stdafx.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(SolutionDir)../DirectX11_2D_Framework/DirectX11_2D_Framework;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)../DirectX11_2D_Framework/DirectX11_2D_Framework;$(ProjectDir)clipper2/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -140,6 +141,7 @@
       <StackCommitSize>
       </StackCommitSize>
       <StackReserveSize>8388608</StackReserveSize>
+      <AdditionalDependencies>$(PorjectDir)clipper2/lib/Clipper2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -147,6 +149,7 @@
     <ClInclude Include="Bounce.h" />
     <ClInclude Include="BreakScaffold.h" />
     <ClInclude Include="CrushRock.h" />
+    <ClInclude Include="MoveRect.h" />
     <ClInclude Include="Obj.h" />
     <ClInclude Include="ObjMH.h" />
     <ClInclude Include="ObjMW.h" />
@@ -162,6 +165,7 @@
     <ClInclude Include="Permeation.h" />
     <ClInclude Include="Rock.h" />
     <ClInclude Include="RockGenerator.h" />
+    <ClInclude Include="RunFixedRoute.h" />
     <ClInclude Include="Scene_ProtoType.h" />
     <ClInclude Include="Sample_Animation.h" />
     <ClInclude Include="Sample_Box2D.h" />
