Update UI and Delete faile
Update uiObj.h and Title.h
Delete unnecessary failes

--- a/HewGame/HewGame/HewGame.vcxproj
+++ b/HewGame/HewGame/HewGame.vcxproj
@@ -152,9 +152,6 @@
     <ClInclude Include="CrushRock.h" />
     <ClInclude Include="DecorativePlayerMove.h" />
     <ClInclude Include="MoveRect.h" />
-    <ClInclude Include="Obj.h" />
-    <ClInclude Include="ObjMH.h" />
-    <ClInclude Include="ObjMW.h" />
     <ClInclude Include="Enemy_type1.h" />
     <ClInclude Include="EnemyChaser.h" />
     <ClInclude Include="Enemy_type2.h" />
@@ -181,7 +178,7 @@
     <ClInclude Include="AntiGravity.h" />
     <ClInclude Include="Thon.h" />
     <ClInclude Include="TitleScene.h" />
-    <ClInclude Include="tSltScene.h" />
+    <ClInclude Include="uiObj.h" />
     <ClInclude Include="YkTestScene.h" />
   </ItemGroup>
   <ItemGroup>
