--- a/HewGame/HewGame/HewGame.vcxproj.filters
+++ b/HewGame/HewGame/HewGame.vcxproj.filters
@@ -37,11 +37,8 @@
     <Filter Include="Component\Enemy">
       <UniqueIdentifier>{7070a3ab-6a8c-4015-a917-b3833f6c6b30}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Component\ObjM">
-      <UniqueIdentifier>{9fac9a45-451f-48b1-93a7-fc54f6181134}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scene\Title">
-      <UniqueIdentifier>{acf7860e-4d36-4e68-b048-7348dabd8523}</UniqueIdentifier>
+    <Filter Include="Component\UI">
+      <UniqueIdentifier>{a987c1d4-4fd2-43ff-9b82-5fcdc7a87396}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -117,21 +114,6 @@
     <ClInclude Include="CrushRock.h">
       <Filter>Component</Filter>
     </ClInclude>
-    <ClInclude Include="ObjMW.h">
-      <Filter>Component\ObjM</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjMH.h">
-      <Filter>Component\ObjM</Filter>
-    </ClInclude>
-    <ClInclude Include="Obj.h">
-      <Filter>Component\ObjM</Filter>
-    </ClInclude>
-    <ClInclude Include="TitleScene.h">
-      <Filter>Scene\Title</Filter>
-    </ClInclude>
-    <ClInclude Include="tSltScene.h">
-      <Filter>Scene\Title</Filter>
-    </ClInclude>
     <ClInclude Include="BigRock.h">
       <Filter>Component</Filter>
     </ClInclude>
@@ -152,6 +134,12 @@
     </ClInclude>
     <ClInclude Include="BreakWall.h">
       <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="uiObj.h">
+      <Filter>Component\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="TitleScene.h">
+      <Filter>Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
