--- a/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
+++ b/DirectX11_2D_Framework/DirectX11_2D_Framework/DirectX11_2D_Framework.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="src\ImGuiApp.cpp" />
     <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Object.cpp" />
+    <ClCompile Include="src\Particle.cpp" />
     <ClCompile Include="src\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -212,6 +213,7 @@
     <ClInclude Include="inc\ImGuiApp.h" />
     <ClInclude Include="inc\Input.h" />
     <ClInclude Include="inc\Object.h" />
+    <ClInclude Include="inc\Particle.h" />
     <ClInclude Include="inc\Serialize.h" />
     <ClInclude Include="inc\Renderer.h" />
     <ClInclude Include="inc\Scene.h" />
