--- a/HewGame/HewGame/HewGame.vcxproj.filters
+++ b/HewGame/HewGame/HewGame.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClInclude Include="FixedSubWindowWorldPos.h">
       <Filter>Component</Filter>
     </ClInclude>
+    <ClInclude Include="SpiderSilk.h">
+      <Filter>Component</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
